# control-blocks

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cpp
docs/: CMake.md  Code-Formatting.md  GUI.md  Setup.md  WindowsSetup.md  dll_errors.md
examples/example_project/: example_project  nothing.py  workspace.py
include/controlblocks/: block.h  code_tools.h  color_node_editor.h  console.h  constant_block.h  diagram.h  display_block.h  file_utils.h  gain_block.h  gui.h  gui_data.h  gui_utils.h  imnodes.h  imnodes_internal.h  mux_block.h  node_editor.h  port.h  python_utils.h  serializable.h  sim_clock.h  state_space.h  state_space_block.h  sum_block.h  vector_utils.h  wire.h  workspace.h
python_gui/: main.py  test.py
src/: CMakeLists.txt  README.md  block.cpp  color_node_editor.cpp  console.cpp  constant_block.cpp  diagram.cpp  display_block.cpp  file_utils.cpp  gain_block.cpp  gui.cpp  gui_utils.cpp  imnodes.cpp  mux_block.cpp  node_editor.cpp  port.cpp  sim_clock.cpp  state_space.cpp  state_space_block.cpp  sum_block.cpp  vector_utils.cpp  wire.cpp  workspace.cpp
util/: clean.sh  compile.sh  run.sh  setup.sh
